--- a/main/res/ecuSimulator.qss
+++ b/main/res/ecuSimulator.qss
@@ -20,6 +20,7 @@ QCheckBox#cbEnable0x3C0::indicator,
 QCheckBox#cbEnable0x663::indicator,
 QCheckBox#cbEnable0x3DB::indicator, 
 QCheckBox#cbEnable0x3DA::indicator,
+QCheckBox#cbEnable0x585::indicator,
 QCheckBox#cbEnable0x5F0::indicator 
 { 
     width: 50px; /* 26 */
@@ -30,6 +31,7 @@ QCheckBox#cbEnable0x3C0::indicator::unchecked,
 QCheckBox#cbEnable0x663::indicator::unchecked,
 QCheckBox#cbEnable0x3DB::indicator::unchecked, 
 QCheckBox#cbEnable0x3DA::indicator::unchecked,
+QCheckBox#cbEnable0x585::indicator::unchecked,
 QCheckBox#cbEnable0x5F0::indicator::unchecked
 {   
     image: url(:/images/cbUnchecked.png);
@@ -39,6 +41,7 @@ QCheckBox#cbEnable0x3C0::indicator::checked,
 QCheckBox#cbEnable0x663::indicator::checked,
 QCheckBox#cbEnable0x3DB::indicator::checked, 
 QCheckBox#cbEnable0x3DA::indicator::checked,
+QCheckBox#cbEnable0x585::indicator::checked,
 QCheckBox#cbEnable0x5F0::indicator::checked
 { 
     image: url(:/images/cbChecked.png);
